tests/asm-link/_consistency/section-union/align-conflict/rgbasm.err
error: cannot place the section at address $cafe
   ╭─[ one-two.asm:7:15 ]
   │
 7 │ SECTION UNION "conflicting alignment", WRAM0 {ATTRS}
   │               ───────────┬───────────  
   │                          ╰───────────── the lower 2 bits of the address are equal to $00 here
───╯
1 error generated.
